# generals-io-monitor-bot

./: .gitignore  Dockerfile  bot.py  pyproject.toml  readme.md
