[tool.poetry]
name = "generals-io-monitor-bot"
version = "0.1.0"
description = ""
authors = ["cxzlw <wsc_zds@qq.com>"]
readme = "README.md"
packages = [{include = "generals_io_monitor_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
aiocqhttp = "^1.4.3"
httpx = "^0.23.3"
ujson = "^5.7.0"
pyyaml = "^6.0"
aiofiles = "^23.1.0"
arrow = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

